2014-09-09
   DN - updated cd4_count and cd4_count_modifier fields to get the correct values from obs in batch_flat_table_initialization script
   KK - Resolved changes observed by QA =~ recepits and verification of drugs, also added a new table to pharmacy table 
   EM - Making sure we prescribe and dispense complete available packs
2014-09-02
	 TM - Changed validation rule checking whether each art patient < 18 has height and weight on each visit to work with flat tables 
2014-09-03
	 TM - Changed validation rule for checking whether patients have reason for starting to work with flat tables
	 TM - Changed validation rule checking tha each outcome is tied to a date to work on flat tables
2014-09-04
	 TM - Changed validation rule requiring that each art patient has a clinic registration encounter to use flat tables
   KK - Rewrote validation rule queries to suite flat tables for checking age against birth date and death date; and for checking vitals enc without weight
   TM - Changed validation rule for checking whether patients have reason for starting to work with flat tables
   TM - Changed validation rule checking tha each outcome is tied to a date to work on flat tables
   DN - added guardian_present_unknown field
2014-09-29
   DN - commented out side_effects visit_date fields
2014-10-14
   DN - uncommented the section of HIV staging observations in mastercard_demographics method
   DN - added 0A and 0P to cohort_validation model. Also included 0A and 0P to the calculation of non-standard regimen
        cohort model
   PB - Added a check to ensure that patients with no start reason are added to unknown reason in reason for starting in app/models/cohort.rb
2014-10-16
   PB - Fixed list_patients_details.rhtml not to crash on patients with unknown age
2014-12-16
   KK - Added functionality for running htn application as a plugin from vendor/plugins
2014-12-11
   DN - Updated batch_flat_table_initialization script to include missing stage defining conditions